--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,19 @@ select {
   }
 }
 
+/* Remove styles from button element */
+button {
+  border-radius: 0;
+  text-align: inherit;
+  background: none;
+  box-shadow: none;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  color: inherit;
+  font: inherit;
+}
+
 /* --------------------- */
 /* Utility Classes       */
 /* --------------------- */
