--- a/src/main/components/LargeLink/LargeLink.module.scss
+++ b/src/main/components/LargeLink/LargeLink.module.scss
@@ -7,7 +7,7 @@
 
   position: relative;
   z-index: 1;
-  display: grid;
+  display: inline-grid;
   place-items: center;
   padding: 0 2em;
   border-radius: 50%;
