--- a/src/index.css
+++ b/src/index.css
@@ -241,3 +241,23 @@ button {
 .fs-600 {
   line-height: 1.1;
 }
+
+/* --------------------- */
+/* Components            */
+/* --------------------- */
+
+.underline-indicators > * {
+  padding: var(--underline-gap, 1rem) 0;
+  border: 0;
+  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
+}
+
+.underline-indicators > *:hover {
+  border-color: hsl(var(--clr-white) / 0.5);
+}
+
+.underline-indicators > .active,
+.underline-indicators > *:has(.active) {
+  color: hsl(var(--clr-white) / 1);
+  border-color: hsl(var(--clr-white) / 1);
+}
